[gd_scene load_steps=5 format=3 uid="uid://bslhrv3eo36wd"]

[ext_resource type="Script" path="res://Core/UI/Lobby/lobby.gd" id="1_kkwo8"]
[ext_resource type="PackedScene" uid="uid://chbh4lxk8rmmd" path="res://Core/UI/Lobby/lobby_player.tscn" id="2_2atg2"]
[ext_resource type="PackedScene" uid="uid://db36f8ux7a06p" path="res://Core/Maps/Dummy/dummy_map.tscn" id="2_d24t2"]
[ext_resource type="Texture2D" uid="uid://i27l5p4kjb1" path="res://assets/backgrounds/modern/modern_1.png" id="4_fv2bp"]

[node name="Lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kkwo8")
game_map_scene = ExtResource("2_d24t2")
lobby_player_scene = ExtResource("2_2atg2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Menus" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Menus/StartMenu"]
layout_mode = 2
text = "Name:
"

[node name="User" type="LineEdit" parent="PanelContainer/Menus/StartMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/StartMenu"]
layout_mode = 2

[node name="Host" type="Button" parent="PanelContainer/Menus/StartMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Join" type="Button" parent="PanelContainer/Menus/StartMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="JoinMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2
text = "IP:
"

[node name="IP" type="LineEdit" parent="PanelContainer/Menus/JoinMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2

[node name="BackJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ConfirmJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="Info" type="Label" parent="PanelContainer/Menus/JoinMenu"]
visible = false
layout_mode = 2

[node name="ReadyMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2
text = "Players:
"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="PanelContainer/Menus/ReadyMenu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="RoleA" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Role A"

[node name="RoleB" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Role B"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="BackReady" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back
"

[node name="Ready" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="TimeContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
layout_mode = 2
text = "Starting in:"

[node name="Time" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="StartTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(0.75, 0.5625)
texture = ExtResource("4_fv2bp")
